--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,12 +12,12 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="MavMatch"
-        android:textColor="@color/utablack"
-        android:textSize="40sp"
-        android:textAlignment="center"
+        android:layout_marginBottom="70dp"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="70dp"/>
+        android:text="@string/app_name"
+        android:textAlignment="center"
+        android:textColor="@color/utablack"
+        android:textSize="40sp" />
 
     <EditText
         android:id="@+id/login_email_et"
