--- a/app/src/main/res/layout/activity_create_club.xml
+++ b/app/src/main/res/layout/activity_create_club.xml
@@ -5,9 +5,11 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:fontFamily="sans-serif"
-        android:text="@string/app_name" />
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/app_name"
+        android:textSize="40sp"
+        android:textAlignment="center" />
 </LinearLayout>
