--- a/app/src/main/res/layout/activity_create_club.xml
+++ b/app/src/main/res/layout/activity_create_club.xml
@@ -8,8 +8,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="sans-serif-black"
         android:text="@string/app_name"
-        android:textSize="40sp"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textSize="40sp" />
 </LinearLayout>
