--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,8 @@
         android:gravity="center_horizontal"
         android:text="@string/app_name"
         android:textAlignment="center"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:fontFamily="sans-serif-black" />
 
     <EditText
         android:id="@+id/login_email_et"
