Forgot password, domain checking, password visibility, email verification added

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
         android:drawableStart="@drawable/email_input"
         android:drawableLeft="@drawable/email_input"
         android:drawablePadding="10dp"
-        android:hint="Email:"
+        android:hint="example@mavs.uta.edu"
         android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:textColor="@color/utablack"
@@ -49,6 +49,16 @@
         android:textColor="@color/utablack"
         android:textColorHint="@color/utagrey" />
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="110dp"
+        android:text="Show Password"
+        android:textColor="@color/utaorange"
+        android:buttonTint="@color/utaorange"
+        android:id="@+id/login_showpass"/>
+
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -66,6 +76,26 @@
         android:layout_margin="10dp"
         android:id="@+id/login_to_signup"
         android:textSize="25dp" />
+
+<!--    <Button-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:paddingLeft="250dp"-->
+<!--        style="?android:attr/borderlessButtonStyle"-->
+<!--        android:text="forgot password"-->
+<!--        android:textColor="@color/utaorange"-->
+<!--        android:layout_margin="10dp"-->
+<!--        android:id="@+id/login_to_forgotPass"-->
+<!--        android:textSize="15dp" />-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:textSize="20dp"
+        android:text="Forgot Password?"
+        android:textColor="@color/utaorange"
+        android:clickable="true"
+        android:id="@+id/login_to_forgotPass" />
 
     <ProgressBar
         android:layout_width="match_parent"
