--- a/app/src/main/res/layout/activity_create_club.xml
+++ b/app/src/main/res/layout/activity_create_club.xml
@@ -7,15 +7,15 @@
 
     <ImageView
         android:id="@+id/club_avatar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="124dp"
+        android:layout_height="118dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.056"
+        app:layout_constraintHorizontal_bias="0.055"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.132"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintVertical_bias="0.106"
+        app:srcCompat="@drawable/profile_icon" />
 
     <TextView
         android:id="@+id/app_title_create_club"
@@ -24,6 +24,7 @@
         android:layout_weight="1"
         android:fontFamily="sans-serif-black"
         android:text="@string/app_name"
+        android:background="@color/utagrey"
         android:textAlignment="center"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,20 +114,23 @@
         android:text="Club Name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.84"
+        app:layout_constraintHorizontal_bias="0.791"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.117" />
+        app:layout_constraintVertical_bias="0.133" />
 
     <Spinner
         android:id="@+id/spinner_category"
         android:layout_width="327dp"
         android:layout_height="50dp"
+        android:background="@drawable/spinner_background"
+        android:contentDescription="category"
         android:spinnerMode="dropdown"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.19"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.343" />
+        app:layout_constraintVertical_bias="0.315" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
