--- a/app/src/main/res/layout/resource_list_viewer.xml
+++ b/app/src/main/res/layout/resource_list_viewer.xml
@@ -27,9 +27,20 @@
         android:layout_marginStart="2dp"
         android:layout_marginTop="5dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/event_description"
+        app:layout_constraintBottom_toTopOf="@+id/event_time"
         app:layout_constraintStart_toEndOf="@+id/location"
         app:layout_constraintTop_toBottomOf="@+id/event_name" />
+
+    <TextView
+        android:id="@+id/event_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="5dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/event_description"
+        app:layout_constraintStart_toEndOf="@+id/time"
+        app:layout_constraintTop_toBottomOf="@+id/event_location" />
 
     <TextView
         android:id="@+id/event_description"
@@ -40,7 +51,7 @@
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/desc"
-        app:layout_constraintTop_toBottomOf="@+id/event_location" />
+        app:layout_constraintTop_toBottomOf="@+id/event_time" />
 
     <TextView
         android:id="@+id/event_name"
@@ -60,7 +71,7 @@
         android:text="Description:"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/location" />
+        app:layout_constraintTop_toBottomOf="@+id/time" />
 
     <TextView
         android:id="@+id/location"
@@ -69,10 +80,22 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:text="Location:"
-        app:layout_constraintBottom_toTopOf="@+id/desc"
+        app:layout_constraintBottom_toTopOf="@+id/time"
         app:layout_constraintEnd_toStartOf="@+id/event_location"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Name_of_event" />
+
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:text="Time:"
+        app:layout_constraintBottom_toTopOf="@+id/desc"
+        app:layout_constraintEnd_toStartOf="@+id/event_time"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/location" />
 
     <TextView
         android:id="@+id/Name_of_event"
