--- a/app/src/main/res/layout/resource_list_viewer.xml
+++ b/app/src/main/res/layout/resource_list_viewer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp">
-
+    <!--Image for the event-->
     <ImageView
         android:id="@+id/event_banner"
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ImageContrastCheck"
         tools:srcCompat="@tools:sample/avatars" />
-
+    <!--Textview holding location information-->
     <TextView
         android:id="@+id/event_location"
         android:layout_width="wrap_content"
@@ -30,7 +30,7 @@
         app:layout_constraintBottom_toTopOf="@+id/event_time"
         app:layout_constraintStart_toEndOf="@+id/location"
         app:layout_constraintTop_toBottomOf="@+id/event_name" />
-
+    <!--Textview holding time information-->
     <TextView
         android:id="@+id/event_time"
         android:layout_width="wrap_content"
@@ -41,7 +41,7 @@
         app:layout_constraintBottom_toTopOf="@+id/event_description"
         app:layout_constraintStart_toEndOf="@+id/time"
         app:layout_constraintTop_toBottomOf="@+id/event_location" />
-
+    <!--Textview for holding event description-->
     <TextView
         android:id="@+id/event_description"
         android:layout_width="wrap_content"
@@ -52,7 +52,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/desc"
         app:layout_constraintTop_toBottomOf="@+id/event_time" />
-
+    <!--Textview for holding the name of the event-->
     <TextView
         android:id="@+id/event_name"
         android:layout_width="wrap_content"
@@ -62,7 +62,7 @@
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/Name_of_event"
         app:layout_constraintTop_toBottomOf="@+id/event_banner" />
-
+    <!--Description tag-->
     <TextView
         android:id="@+id/desc"
         android:layout_width="wrap_content"
@@ -72,7 +72,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/time" />
-
+    <!--Location tag-->
     <TextView
         android:id="@+id/location"
         android:layout_width="wrap_content"
@@ -84,7 +84,7 @@
         app:layout_constraintEnd_toStartOf="@+id/event_location"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Name_of_event" />
-
+    <!--Time tag-->
     <TextView
         android:id="@+id/time"
         android:layout_width="wrap_content"
@@ -96,7 +96,7 @@
         app:layout_constraintEnd_toStartOf="@+id/event_time"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/location" />
-
+    <!--Event name tag-->
     <TextView
         android:id="@+id/Name_of_event"
         android:layout_width="wrap_content"
