--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!--Recycler view for events-->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/events_list"
         android:layout_width="0dp"
@@ -17,6 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_title" />
 
+    <!--Sign out button-->
     <Button
         android:id="@+id/button_logout"
         android:layout_width="wrap_content"
@@ -25,6 +27,7 @@
         app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!--Textview for the title-->
     <TextView
         android:id="@+id/app_title"
         android:layout_width="match_parent"
@@ -38,6 +41,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!--Layout containing the bottom tabs-->
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="wrap_content"
@@ -49,6 +53,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent">
 
+        <!--Home button located in the tabs-->
         <ImageButton
             android:id="@+id/home_button"
             android:layout_width="0dp"
@@ -61,6 +66,7 @@
             android:scaleType="centerInside"
             app:srcCompat="@drawable/home_icon" />
 
+        <!--Refresh button located in the tabs-->
         <ImageButton
             android:id="@+id/refresh_button"
             android:layout_width="0dp"
@@ -73,6 +79,7 @@
             android:scaleType="centerInside"
             app:srcCompat="@drawable/refresh_icon" />
 
+        <!--Post button located in the tabs-->
         <ImageButton
             android:id="@+id/post_button"
             android:layout_width="0dp"
@@ -85,6 +92,7 @@
             android:scaleType="centerInside"
             app:srcCompat="@drawable/circle_plus_icon" />
 
+        <!--Search button located in the tabs-->
         <ImageButton
             android:id="@+id/search_button"
             android:layout_width="0dp"
@@ -97,6 +105,7 @@
             android:scaleType="centerInside"
             app:srcCompat="@drawable/search_icon" />
 
+        <!--Profile button located in the tabs-->
         <ImageButton
             android:id="@+id/profile_button"
             android:layout_width="0dp"
