--- a/app/src/main/res/layout/resource_list_viewer.xml
+++ b/app/src/main/res/layout/resource_list_viewer.xml
@@ -21,41 +21,15 @@
         tools:ignore="ImageContrastCheck"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <!--Textview holding location information-->
+    <!--Event name tag-->
     <TextView
-        android:id="@+id/event_location"
+        android:id="@+id/Name_of_event"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="5dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/event_time"
-        app:layout_constraintStart_toEndOf="@+id/location"
-        app:layout_constraintTop_toBottomOf="@+id/event_name" />
-
-    <!--Textview holding time information-->
-    <TextView
-        android:id="@+id/event_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="5dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/event_description"
-        app:layout_constraintStart_toEndOf="@+id/time"
-        app:layout_constraintTop_toBottomOf="@+id/event_location" />
-
-    <!--Textview for holding event description-->
-    <TextView
-        android:id="@+id/event_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="5dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/desc"
-        app:layout_constraintTop_toBottomOf="@+id/event_time" />
+        android:layout_marginTop="4dp"
+        android:text="Event Name:"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/event_banner" />
 
     <!--Textview for holding the name of the event-->
     <TextView
@@ -68,16 +42,27 @@
         app:layout_constraintStart_toEndOf="@+id/Name_of_event"
         app:layout_constraintTop_toBottomOf="@+id/event_banner" />
 
-    <!--Description tag-->
     <TextView
-        android:id="@+id/desc"
+        android:id="@+id/Name_of_org"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Description:"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="6dp"
+        android:text="Org Name:"
+        app:layout_constraintBottom_toTopOf="@+id/location"
+        app:layout_constraintEnd_toStartOf="@+id/event_organizer"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/time" />
+        app:layout_constraintTop_toBottomOf="@+id/Name_of_event" />
+
+    <TextView
+        android:id="@+id/event_organizer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="6dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/event_location"
+        app:layout_constraintStart_toEndOf="@+id/Name_of_org"
+        app:layout_constraintTop_toBottomOf="@+id/Name_of_event" />
 
     <!--Location tag-->
     <TextView
@@ -90,7 +75,19 @@
         app:layout_constraintBottom_toTopOf="@+id/time"
         app:layout_constraintEnd_toStartOf="@+id/event_location"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Name_of_event" />
+        app:layout_constraintTop_toBottomOf="@+id/Name_of_org" />
+
+    <!--Textview holding location information-->
+    <TextView
+        android:id="@+id/event_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="5dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/event_time"
+        app:layout_constraintStart_toEndOf="@+id/location"
+        app:layout_constraintTop_toBottomOf="@+id/event_organizer" />
 
     <!--Time tag-->
     <TextView
@@ -105,14 +102,39 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/location" />
 
-    <!--Event name tag-->
+    <!--Textview holding time information-->
     <TextView
-        android:id="@+id/Name_of_event"
+        android:id="@+id/event_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="Event Name:"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="5dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/event_description"
+        app:layout_constraintStart_toEndOf="@+id/time"
+        app:layout_constraintTop_toBottomOf="@+id/event_location" />
+
+    <!--Description tag-->
+    <TextView
+        android:id="@+id/desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="Description:"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/event_banner" />
+        app:layout_constraintTop_toBottomOf="@+id/time" />
+
+    <!--Textview for holding event description-->
+    <TextView
+        android:id="@+id/event_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="5dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/desc"
+        app:layout_constraintTop_toBottomOf="@+id/event_time" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
