--- a/app/src/main/res/layout/activity_event_page.xml
+++ b/app/src/main/res/layout/activity_event_page.xml
@@ -19,6 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <!--Textview for holding the name of the event-->
         <TextView
             android:id="@+id/eventName"
             android:layout_width="wrap_content"
@@ -32,6 +33,7 @@
             android:gravity="center"
             android:text="eName"/>
 
+        <!--Textview for holding the name of the event's organizer-->
         <TextView
             android:id="@+id/eventOrgName"
             android:layout_width="wrap_content"
@@ -44,6 +46,7 @@
             android:textSize="16sp"
             android:text="eOrgName" />
 
+        <!--Textview for holding the location of the event-->
         <TextView
             android:id="@+id/eventLocation"
             android:layout_width="wrap_content"
@@ -57,6 +60,7 @@
             android:textSize="16sp"
             android:text="eLocation" />
 
+        <!--Textview for holding the time of the event-->
         <TextView
             android:id="@+id/eventTime"
             android:layout_width="wrap_content"
@@ -69,7 +73,8 @@
             android:background="@drawable/event_border"
             android:textSize="16sp"
             android:text="eTime"/>
-
+        
+        <!--ImageView for holding the image of the event-->
         <ImageView
             android:id="@+id/eventImage"
             android:layout_width="match_parent"
@@ -82,6 +87,7 @@
             app:layout_constraintRight_toRightOf="parent">
         </ImageView>
 
+        <!--Textview for holding the descripton of the event-->
         <TextView
             android:id="@+id/eventDesc"
             android:layout_width="match_parent"
@@ -95,6 +101,7 @@
             android:textSize="14sp"
             android:text="eDesc"/>
 
+        <!--Button for RSVP function-->
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
