--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -78,19 +78,51 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="70dp"
             />
-        <EditText
-            android:id="@+id/post_time"
-            android:layout_width = "match_parent"
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType = "text"
-            android:text = "Time"
-            android:textColor="#777"
-            android:gravity = "top"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="540dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="70dp"
-            />
+            android:orientation="horizontal"
+            android:gravity="center|bottom"
+            android:layout_marginTop="550dp">
+
+            <Spinner
+                android:id="@+id/start_year"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_weight="1"
+                android:spinnerMode="dropdown"
+                ></Spinner>
+            <Spinner
+                android:id="@+id/start_month"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_weight="1"
+                android:spinnerMode="dropdown"
+                ></Spinner>
+            <Spinner
+                android:id="@+id/start_day"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_weight="1"
+                android:spinnerMode="dropdown"
+                ></Spinner>
+            <Spinner
+                android:id="@+id/start_time"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_weight="1"
+                android:spinnerMode="dropdown"
+                ></Spinner>
+        </LinearLayout>
 
 
         <LinearLayout
@@ -119,6 +151,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Post" />
+
         </LinearLayout>
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
