--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -94,6 +94,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
                 android:spinnerMode="dropdown"
+                android:entries = "@array/years"
                 ></Spinner>
             <Spinner
                 android:id="@+id/start_month"
@@ -103,6 +104,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
                 android:spinnerMode="dropdown"
+                android:entries = "@array/month"
                 ></Spinner>
             <Spinner
                 android:id="@+id/start_day"
@@ -112,6 +114,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
                 android:spinnerMode="dropdown"
+                android:entries="@array/days"
                 ></Spinner>
             <Spinner
                 android:id="@+id/start_time"
@@ -121,6 +124,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
                 android:spinnerMode="dropdown"
+                android:entries="@array/time"
                 ></Spinner>
         </LinearLayout>
 
