--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="sans-serif-black"
-            android:text="USER NAME"
+            android:text="Rsvps:"
             android:textAlignment="center"
             android:textSize="22sp"
             app:layout_constraintStart_toStartOf="parent"
