--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -46,10 +46,19 @@
             android:id="@+id/clubs_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Clubs"
+            android:text="Your Clubs"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/user_name_view"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/create_clubs_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create Clubs"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/user_name_view"
+            app:layout_constraintTop_toBottomOf="@+id/clubs_button" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!--Recycler view for events-->
